@@ -26,3 +26,9 @@ jsonFiles=Fitxers JSON
 generalSubstitutions=Substitucions generals
 substitutionsForUrl=Substitucions per a %S
 substitutionsForUrls=Substitucions per a %S i altres
+io.jsonError.file=S'ha produït un error en processar el JSON del fitxer %1$S: %2$S
+io.jsonError.url=S'ha produït un error en processar el JSON de %1$S: %2$S
+io.networkError=S'ha produït un error en accedir a %1$S: %2$S
+io.networkError.generic=No es pot connectar amb el servidor
+io.readError=S'ha produït un error en llegir el fitxer %1$S: %2$S
+io.writeError=S'ha produït un error en escriure el fitxer %1$S: %2$S
