@@ -26,3 +26,9 @@ jsonFiles=JSON files
 generalSubstitutions=General substitutions
 substitutionsForUrl=Substitutions for %S
 substitutionsForUrls=Substitutions for %S and others
+io.jsonError.file=Error processing JSON from file %1$S: %2$S
+io.jsonError.url=Error processing JSON from %1$S: %2$S
+io.networkError=Error accessing %1$S: %2$S
+io.networkError.generic=Can't connect to server
+io.readError=Error reading file %1$S: %2$S
+io.writeError=Error writing file %1$S: %2$S
